--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,72 @@
     <link rel="stylesheet" href="css/media.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <nav>
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-5 col-md-4">logo</div>
+                <div class="col-2 d-md-none">menu hamb</div>
+                <div class="col d-none col-md-4 d-md-inline-block">portfolio</div>
+            </div>
+        </div>
+    </nav>
+    <main>
+        <!-- start bootstrap -->
+        <section>
+            <div class="container">
+                <div class="row flex-column align-items-center">
+                    <div class="col-3"><img src="bootstrap_freelancer/img/avatar.svg" alt=""></div>
+                    <div class="col-6 text-center">START BOOTSTRAP</div>
+                    <div class="col-4 text-center">line-star-line</div>
+                    <div class="col-6 text-center">graphic asrtist web design illustrator</div>
+
+                </div>
+            </div>
+
+        </section>
+        <!-- portfolio -->
+        <section>
+            <div class="container ">
+                <div class="row flex-column align-items-center">
+                    <div class="col-6"></div>
+                    <div class="col-fluid">
+                        <div class="row flex-wrap">
+                            <div class="col-12 col-md-6 col-lg-4"><img src="bootstrap_freelancer/img/cabin.png" alt="">
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4"><img src="bootstrap_freelancer/img/cabin.png" alt="">
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4"><img src="bootstrap_freelancer/img/cabin.png" alt="">
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4"><img src="bootstrap_freelancer/img/cabin.png" alt="">
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4"><img src="bootstrap_freelancer/img/cabin.png" alt="">
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4"><img src="bootstrap_freelancer/img/cabin.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+        <!-- about -->
+        <section>
+            <div class="container text-center">
+                <h2>ABOUT</h2>
+                <h2>line star line</h2>
+                <div class="row flex-wrap">
+                    <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita obcaecati qui ab voluptatum doloremque, harum eos recusandae? Minus, rerum fugiat veritatis, non eaque molestiae cupiditate impedit quas, assumenda odit dolor!</div>
+                    <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, corporis quos animi ex nihil commodi cum cupiditate voluptatem quas. Nobis deleniti corporis consequuntur ipsum odio atque nihil et, natus laborum.</div>
+                </div>
+
+            </div>
+
+        </section>
+    </main>
+
 </body>
+
 </html>
