--- a/index.html
+++ b/index.html
@@ -6,30 +6,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
     <title>Document</title>
 </head>
 
 <body>
-    <nav>
+    <nav class="bg-dark">
         <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-5 col-md-4">logo</div>
-                <div class="col-2 d-md-none">menu hamb</div>
-                <div class="col d-none col-md-4 d-md-inline-block">portfolio</div>
+            <div class="row justify-content-between align-items-center">
+                <div class="col left-nav py-4  text-white">
+                    <h1>START BOOSTRAP</h1>
+                </div>
+                <div class="col right-nav">
+                    <ul class="nav d-flex justify-content-end d-none d-md-flex">
+                        <li class="nav-item"><a href="" class="navlink text-decoration-none text-white">
+                                <h3>PORTFOLIO</h3>
+                            </a></li>
+                        <li class="nav-item"><a href="" class="navlink text-decoration-none text-white">
+                                <h3>ABOUT</h3>
+                            </a></li>
+                        <li class="nav-item"><a href="" class="navlink text-decoration-none text-white">
+                                <h3>CONTACT</h3>
+                            </a></li>
+                    </ul>
+                    <button class="hamnurger-nav d-flex justify-content-end d-md-none">
+                        <i class="fa-solid fa-bars"></i>
+
+                    </button>
+                </div>
+
             </div>
         </div>
     </nav>
     <main>
         <!-- start bootstrap -->
-        <section>
-            <div class="container">
+        <section class="bg-primary">
+            <div class="container p-5 text-white ">
                 <div class="row flex-column align-items-center">
                     <div class="col-3"><img src="bootstrap_freelancer/img/avatar.svg" alt=""></div>
-                    <div class="col-6 text-center">START BOOTSTRAP</div>
+                    <div class="col-6 text-center"><h2>SATRT BOOTSTRAP</h2></div>
                     <div class="col-4 text-center">line-star-line</div>
-                    <div class="col-6 text-center">graphic asrtist web design illustrator</div>
+                    <div class="col-6 text-center"><h2>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h2></div>
 
                 </div>
             </div>
@@ -37,22 +58,40 @@
         </section>
         <!-- portfolio -->
         <section>
-            <div class="container ">
+            <div class="container p-5">
                 <div class="row flex-column align-items-center">
                     <div class="col-6"></div>
                     <div class="col-fluid">
-                        <div class="row flex-wrap">
-                            <div class="col-12 col-md-6 col-lg-4"><img src="bootstrap_freelancer/img/cabin.png" alt="">
+                        <div class="row flex-wrap g-4">
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="card">
+                                    <img src="bootstrap_freelancer/img/cabin.png" alt="" class="card-img">
+                                </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4"><img src="bootstrap_freelancer/img/cabin.png" alt="">
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="card">
+                                    <img src="bootstrap_freelancer/img/cabin.png" alt="" class="card-img">
+                                </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4"><img src="bootstrap_freelancer/img/cabin.png" alt="">
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="card">
+                                    <img src="bootstrap_freelancer/img/cabin.png" alt="" class="card-img">
+                                </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4"><img src="bootstrap_freelancer/img/cabin.png" alt="">
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="card">
+                                    <img src="bootstrap_freelancer/img/cabin.png" alt="" class="card-img">
+                                </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4"><img src="bootstrap_freelancer/img/cabin.png" alt="">
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="card">
+                                    <img src="bootstrap_freelancer/img/cabin.png" alt="" class="card-img">
+                                </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4"><img src="bootstrap_freelancer/img/cabin.png" alt="">
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="card">
+                                    <img src="bootstrap_freelancer/img/cabin.png" alt="" class="card-img">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -62,18 +101,68 @@
 
         </section>
         <!-- about -->
-        <section>
-            <div class="container text-center">
+        <section class="bg-primary">
+            <div class="container p-5 text-center text-white">
                 <h2>ABOUT</h2>
                 <h2>line star line</h2>
-                <div class="row flex-wrap">
-                    <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita obcaecati qui ab voluptatum doloremque, harum eos recusandae? Minus, rerum fugiat veritatis, non eaque molestiae cupiditate impedit quas, assumenda odit dolor!</div>
-                    <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, corporis quos animi ex nihil commodi cum cupiditate voluptatem quas. Nobis deleniti corporis consequuntur ipsum odio atque nihil et, natus laborum.</div>
+                <div class="row flex-wrap g-3">
+                    <div class="col-12 col-md-6">
+                        <div class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+                            obcaecati qui ab voluptatum doloremque, harum eos recusandae? Minus, rerum fugiat veritatis,
+                            non
+                            eaque molestiae cupiditate impedit quas, assumenda odit dolor!</div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="text-"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam,
+                            corporis quos animi ex nihil commodi cum cupiditate voluptatem quas. Nobis deleniti corporis
+                            consequuntur ipsum odio atque nihil et, natus laborum.</div>
+                    </div>
+                    <div class="col-12 text-center"><button type="button" class="btn btn-outline-light">Download</button></div>
                 </div>
 
             </div>
 
         </section>
+        <!-- contact me  -->
+        <section>
+
+        </section>
+        <!-- usefull link -->
+        <section class="bg-secondary">
+            <div class="container text-white">
+                <div class="row flex-wrap g-4 align-items-center">
+                    <div class="col-12 col-md-4 text-center">
+                        <div>
+                            <H4>LOCATION</H4>
+                            <h4>2215 John Daniel Drive Clark, MO 54243</h4>
+
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 text-center">
+                        <div>
+                            <h4>AROUND THE web</h4>
+
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 text-center text-white">
+                        <div>
+                            <h4>ABOUT FREELANCER</h4>
+                            <h4>Freelance is free to use, opend suorce Bootstrap Theme created by <a href="" class="text-decoration-none" >Start bootstrap</a></h4>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+        <footer class="bg-dark">
+            <div class="container text-center p-2">
+                <h6>Copyright your website 2019</h6>
+
+            </div>
+
+        </footer>
     </main>
 
 </body>
