inserisco bottoni e box per imput

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <div class="col left-nav py-4  text-white">
                     <h1>START BOOSTRAP</h1>
                 </div>
-                <div class="col right-nav">
-                    <ul class="nav d-flex justify-content-end d-none d-md-flex">
+                <div class="col col-md-4  right-nav text-end">
+                    <ul class="nav d-flex  justify-content-sm-between d-none d-md-flex ">
                         <li class="nav-item"><a href="" class="navlink text-decoration-none text-white">
                                 <h3>PORTFOLIO</h3>
                             </a></li>
@@ -33,7 +33,7 @@
                                 <h3>CONTACT</h3>
                             </a></li>
                     </ul>
-                    <button class="hamnurger-nav d-flex justify-content-end d-md-none">
+                    <button class="hamnurger-nav d-md-none">
                         <i class="fa-solid fa-bars"></i>
 
                     </button>
@@ -47,10 +47,14 @@
         <section class="bg-primary">
             <div class="container p-5 text-white ">
                 <div class="row flex-column align-items-center">
-                    <div class="col-3"><img src="bootstrap_freelancer/img/avatar.svg" alt=""></div>
-                    <div class="col-6 text-center"><h2>SATRT BOOTSTRAP</h2></div>
+                    <div class="col-8"><img src="bootstrap_freelancer/img/avatar.svg" alt=""></div>
+                    <div class="col-6 text-center">
+                        <h2>SATRT BOOTSTRAP</h2>
+                    </div>
                     <div class="col-4 text-center">line-star-line</div>
-                    <div class="col-6 text-center"><h2>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h2></div>
+                    <div class="col text-center">
+                        <h3 class="fw-light">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h3>
+                    </div>
 
                 </div>
             </div>
@@ -117,7 +121,8 @@
                             corporis quos animi ex nihil commodi cum cupiditate voluptatem quas. Nobis deleniti corporis
                             consequuntur ipsum odio atque nihil et, natus laborum.</div>
                     </div>
-                    <div class="col-12 text-center"><button type="button" class="btn btn-outline-light">Download</button></div>
+                    <div class="col-12 text-center"><button type="button"
+                            class="btn btn-outline-light">Download</button></div>
                 </div>
 
             </div>
@@ -125,6 +130,33 @@
         </section>
         <!-- contact me  -->
         <section>
+            <div class="container p-5 ">
+                <div class="top-contact text-center">
+                    <h2>CONTACT ME</h2>
+                    <DIV>STAR </DIV>
+                </div>
+                <div class="bot-contact text-start">
+                    <div class="form-floating ">
+                        <input type="email" class="form-control my-form" id="floatingInput" placeholder="name">
+                        <label for="floatingInput">Name</label>
+                    </div>
+                    <div class="form-floating">
+                        <input type="password" class="form-control my-form" id="floatingPassword" placeholder="e@mail.">
+                        <label for="floatingPassword">E-mail address</label>
+                    </div>
+                    <div class="form-floating">
+                        <input type="password" class="form-control my-form" id="floatingPassword"
+                            placeholder="Phone number">
+                        <label for="floatingPassword">Phone number</label>
+                    </div>
+                    <div class="form-floating">
+                        <textarea class="form-control my-form" placeholder="Leave a Message here" id="floatingTextarea2"
+                            style="height: 100px"></textarea>
+                        <label for="floatingTextarea2">Message</label>
+                    </div>
+                    <div class="btn btn-primary">Send</div>
+                </div>
+            </div>
 
         </section>
         <!-- usefull link -->
@@ -147,7 +179,8 @@
                     <div class="col-12 col-md-4 text-center text-white">
                         <div>
                             <h4>ABOUT FREELANCER</h4>
-                            <h4>Freelance is free to use, opend suorce Bootstrap Theme created by <a href="" class="text-decoration-none" >Start bootstrap</a></h4>
+                            <h4>Freelance is free to use, opend suorce Bootstrap Theme created by <a href=""
+                                    class="text-decoration-none">Start bootstrap</a></h4>
 
                         </div>
                     </div>
