--- a/index.html
+++ b/index.html
@@ -74,27 +74,27 @@
                             </div>
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="card">
-                                    <img src="bootstrap_freelancer/img/cabin.png" alt="" class="card-img">
+                                    <img src="bootstrap_freelancer/img/cake.png" alt="" class="card-img">
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="card">
-                                    <img src="bootstrap_freelancer/img/cabin.png" alt="" class="card-img">
+                                    <img src="bootstrap_freelancer/img/circus.png" alt="" class="card-img">
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="card">
-                                    <img src="bootstrap_freelancer/img/cabin.png" alt="" class="card-img">
+                                    <img src="bootstrap_freelancer/img/game.png" alt="" class="card-img">
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="card">
-                                    <img src="bootstrap_freelancer/img/cabin.png" alt="" class="card-img">
+                                    <img src="bootstrap_freelancer/img/safe.png" alt="" class="card-img">
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="card">
-                                    <img src="bootstrap_freelancer/img/cabin.png" alt="" class="card-img">
+                                    <img src="bootstrap_freelancer/img/submarine.png" alt="" class="card-img">
                                 </div>
                             </div>
                         </div>
@@ -111,17 +111,17 @@
                 <h2>line star line</h2>
                 <div class="row flex-wrap g-3">
                     <div class="col-12 col-md-6">
-                        <div class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+                        <div class="text text-start"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
                             obcaecati qui ab voluptatum doloremque, harum eos recusandae? Minus, rerum fugiat veritatis,
                             non
                             eaque molestiae cupiditate impedit quas, assumenda odit dolor!</div>
                     </div>
                     <div class="col-12 col-md-6">
-                        <div class="text-"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam,
+                        <div class="text text-start"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam,
                             corporis quos animi ex nihil commodi cum cupiditate voluptatem quas. Nobis deleniti corporis
                             consequuntur ipsum odio atque nihil et, natus laborum.</div>
                     </div>
-                    <div class="col-12 text-center"><button type="button"
+                    <div class="col-12 p-2 text-center"><button type="button"
                             class="btn btn-outline-light">Download</button></div>
                 </div>
 
@@ -154,14 +154,14 @@
                             style="height: 100px"></textarea>
                         <label for="floatingTextarea2">Message</label>
                     </div>
-                    <div class="btn btn-primary">Send</div>
+                    <div class=" mt-3 btn btn-primary mybtn">Send</div>
                 </div>
             </div>
 
         </section>
         <!-- usefull link -->
         <section class="bg-secondary">
-            <div class="container text-white">
+            <div class="container p-5 text-white">
                 <div class="row flex-wrap g-4 align-items-center">
                     <div class="col-12 col-md-4 text-center">
                         <div>
@@ -190,7 +190,7 @@
 
         </section>
         <footer class="bg-dark">
-            <div class="container text-center p-2">
+            <div class="container text-center p-5">
                 <h6>Copyright your website 2019</h6>
 
             </div>
