fix spiegazione florian

--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
                     <h1>START BOOSTRAP</h1>
                 </div>
                 <div class="col col-md-4  right-nav text-end">
-                    <ul class="nav d-flex  justify-content-sm-between d-none d-md-flex ">
-                        <li class="nav-item"><a href="" class="navlink text-decoration-none text-white">
-                                <h3>PORTFOLIO</h3>
+                    <ul class="nav d-flex gap-3 justify-content-sm-between d-none d-md-flex ">
+                        <li class="nav-item"><a href="" class="navlink fs-4  text-decoration-none text-white">
+                                PORTFOLIO
                             </a></li>
-                        <li class="nav-item"><a href="" class="navlink text-decoration-none text-white">
-                                <h3>ABOUT</h3>
+                        <li class="nav-item"><a href="" class="navlink fs-4 text-decoration-none text-white">
+                                ABOUT
                             </a></li>
-                        <li class="nav-item"><a href="" class="navlink text-decoration-none text-white">
-                                <h3>CONTACT</h3>
+                        <li class="nav-item"><a href="" class="navlink fs-4 text-decoration-none text-white">
+                                CONTACT
                             </a></li>
                     </ul>
-                    <button class="hamnurger-nav d-md-none">
+                    <button class="hamburger-nav fs-1 d-md-none">
                         <i class="fa-solid fa-bars"></i>
 
                     </button>
